# wotr-ladder-update

./: .clasp.json  .eslintrc.json  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  appsscript.json  ladder.ts  objects.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
apps_script/: .clasp.json  appsscript.json  package-lock.json  package.json
apps_script/src/: update.ts
apps_script/src/types/: types.ts
cloud_functions/rename_logfiles/: pyproject.toml
cloud_functions/rename_logfiles/rename_logfiles/: main.py
cloud_functions/rename_logfiles/typings/google/auth/: __init__.pyi  _default.pyi  credentials.pyi
cloud_functions/rename_logfiles/typings/google/oauth2/: credentials.pyi
cloud_functions/rename_logfiles/typings/googleapiclient/: discovery.pyi
src/: ladder.ts  lib.ts  objects.ts  sheets.ts  types.ts  update.ts  utils.ts
src/types/: cardGameTypes.ts  wotrTypes.ts
